--- a/S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇/index.html
+++ b/S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇/index.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇</h1><a href="https://zhuanlan.zhihu.com/p/259774477">原文链接</a>
+    <h1>S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇</h1>
     <div class="RichText ztext Post-RichText css-1g0fqss" options="[object Object]">
         <p data-first-child="" data-pid="i-MWvG_5">主讲：长毛、FireFox、kRYST4L</p>
         <p data-pid="gOZI6wum">辅讲：丹尼二狗、麦迪</p>
@@ -133,6 +133,6 @@
         <h2>冠军预测</h2>
         <p data-pid="OPoqSCRJ">今年的比较看好的队伍，我看好队伍有TES、DWG和JDG，这三只是我比较看好的队伍，冠军我觉得会从这三只队伍里面去产生。</p>
     </div>
-    <div class="ContentItem-time" role="button" tabindex="0">编辑于 2020-09-27 13:14</div>
+    <div class="ContentItem-time" role="button" tabindex="0"><a href="https://zhuanlan.zhihu.com/p/259774477">编辑于 2020-09-27 13:14</a></div>
     <link rel="stylesheet" href="../style.css"></link>
 </div>
