--- a/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010480060/index.html
+++ b/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010480060/index.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>为啥南京大学蒋炎岩老师的操作系统课那么难啊?</h1><a href="https://www.zhihu.com/question/598621331/answer/3010480060">原文链接</a><span
+    <h1>为啥南京大学蒋炎岩老师的操作系统课那么难啊?</h1><span
         class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]">
         <p data-first-child="" data-pid="-cVrSahv">你可能都不知道在学习操作系统课程的时候遇到这样一位老师是多么的幸运。</p>
         <p data-pid="KdN_L7HV">他上课会B站直播，也会OBS录屏直播并上传到B站，视频中会将屏幕贴在投影仪对应的位置。</p>
@@ -30,7 +30,8 @@
             但操作系统这门课由于其性质的原因，和开在大二的CSAPP，大三的编译原理类似，第一次学受限于眼界和时间压力学业压力，感到困难和吃力是很正常的，而且jyy老师一节课的内容含量很满确实有点吃不消，对于初学者来说我相信是颇具压力的，我建议你先囫囵吞枣咽下去，等你再过一段时间触及到操作系统的魅力的时候，或许你还会把所有的视频翻出来重新看一遍，是真的讲的很好。
         </p>
     </span>
-    <div class="ContentItem-time"><a href="//www.zhihu.com/question/598621331/answer/3010480060" target="_blank"><span
+    <div class="ContentItem-time"><a href="https://www.zhihu.com/question/598621331/answer/3010480060" target="_blank"><span
                 aria-label="发布于 2023-05-03 09:55" data-tooltip="发布于 2023-05-03 09:55">编辑于 2023-05-03 21:21</span></a>・IP
         属地湖北</div>
+    <link rel="stylesheet" href="../style.css"></link>
 </div>
