--- a/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010995032/index.html
+++ b/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010995032/index.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>为啥南京大学蒋炎岩老师的操作系统课那么难啊?</h1><a href="https://www.zhihu.com/question/598621331/answer/3010995032">原文链接</a><span
+    <h1>为啥南京大学蒋炎岩老师的操作系统课那么难啊?</h1><span
         class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]">
         <p data-first-child="" data-pid="fzejgQwx">泻药</p>
         <p data-pid="wlEd9rzP">先对jyy老师的课做一下评价</p>
@@ -38,7 +38,8 @@
         </ul>
         <p data-pid="PCZSYnck">希望你能变得更强捏 ，希望你能获得勇气哟，共勉！！！</p>
     </span>
-    <div class="ContentItem-time"><a href="//www.zhihu.com/question/598621331/answer/3010995032" target="_blank"><span
+    <div class="ContentItem-time"><a href="https://www.zhihu.com/question/598621331/answer/3010995032" target="_blank"><span
                 aria-label="发布于 2023-05-03 16:41" data-tooltip="发布于 2023-05-03 16:41">编辑于 2023-05-05 17:36</span></a>・IP
         属地北京</div>
+    <link rel="stylesheet" href="../style.css"></link>
 </div>
