--- a/经济下行期会对00后有什么影响？3010227214/index.html
+++ b/经济下行期会对00后有什么影响？3010227214/index.html
@@ -1,1 +1,70 @@
-<div><h1>经济下行期会对00后有什么影响？</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]"><p data-first-child="" data-pid="PjaumC7K">谢邀。</p><p data-pid="5dKeWR9S">代际贫困是核心。</p><p class="ztext-empty-paragraph"><br/></p><p data-pid="MAwLT3x4">我觉得很多讨论聊的没错，但焦点模糊。</p><p data-pid="rkiAik_G">青年失业这事，你往后退一步，放到几十年的尺度上看会很清晰：</p><p data-pid="Z-y9FMdt">某个时间段的小胖友，他们未来十年乃至更长时间里，收入会明显降低。</p><p data-pid="rI4ldFZj">这才是青年失业的核心：财富流动的节奏在某代人身上被打乱。</p><p class="ztext-empty-paragraph"><br/></p><p data-pid="cNu3Mk87">老美智库CAP，13年讨论次贷危机后老美青年高失业率的长期后果。那时他们16至24岁的青年失业率是16.2%。</p><img src="./img/0.jpg" aspect-ratio ="1.7914012738853504"><p data-pid="OYDpotKT">结论是：</p><p data-pid="tbTR5D2d">约有100万老美青年遭受长期失业；</p><p data-pid="O9A-Yc0B">他们在未来十年的收入损失约200亿美刀，更长期的损失不易测算。</p><p data-pid="RUgDrb6e">说白了，长期化的青年高失业和疤痕效应一样，不是把刀子拔出来伤口就会瞬间愈合。</p><p class="ztext-empty-paragraph"><br/></p><p data-pid="VKOnrONm">国际劳工组织（ILO）在12年也有类似报告（第101次会议，《青年就业危机：该行动了》），报告里阐明了青年失业的问题：</p><p data-pid="6pL43uPS">一，低收入。</p><p data-pid="mdkSGSDE">失业青年不用说，那是无收入。</p><p data-pid="iJc1NMEG">就业青年的收入也不会高。因为此时是买方市场，总体劳动力卖价会降低或变相降低（工资不变工时增加）。</p><p data-pid="v0s7_5WG">那年全球就业青年低工资比例32.5%，而整体就业者低工资比例为14.6%（按各自国家标准划分）；</p><p data-pid="P_Bqkj8C">二，低保障。</p><p data-pid="OhWV_poQ">非正规就业，也就是所谓的“灵活就业”。工作环境、工时、薪资发放、安全设施等受法律保护力度明显更弱。</p><p data-pid="Wlbe2OHN">当然，无社保也是常态；</p><p data-pid="6jVEeM1G">三，低质量。</p><p data-pid="JucomXay">高失业状态下，青年能获得的就业岗位质量不高，难以成为转向长期就业的垫脚石岗位。</p><p data-pid="iIkr2vX4">这个很好理解，你送十年外卖也很难换回一份办公室工作，对应职业积累过低。</p><p data-pid="aZ7FGXfO">这容易导致青年困在“交替性失业”里，反复在多份临时就业间打转。</p><p class="ztext-empty-paragraph"><br/></p><p data-pid="7-xoTf6z">上面三点，还可以说是“摩擦性失业”，刚进社会的青年总要遭遇。</p><p data-pid="WNlGUWWu">那长期化就是个大麻烦。</p><p data-pid="pbO-tOJX">以印尼为例，01年失业青年的找工作平均时间为6.9个月，09年猛升到14.7个月。</p><p data-pid="dLj5J7g-">10年时，经合组织青年的长期失业发生率升到22.6%、临时就业发生率38%、兼职27.8%。</p><p data-pid="7pv43Jyf">几组数据对照，可以看出原本短期的摩擦性失业出现长期化。</p><p data-pid="Xq5tZ1mQ">长期化后，青年的精神状态会下沉。</p><p data-pid="miY1oDvv">一，信心遭受打击，放弃就业；</p><p data-pid="fbrYtzvl">二，受教育意愿衰退。10年时，欧盟15至25岁青年里，不上学/不进修/不工作的比例为12.8%；</p><p data-pid="ChzyHmTu">三，啃老族回归。10年三季度，经合组织的青年啃老族上升至12.5%，高于08年的10.8%。</p><p data-pid="dux4G6Jf">受教育青年失业的社会心理打击尤为严重。因为教育是青年走进社会前、对社会最主要的认知。一旦教育投资失败，教育所承载的社会信念也会被质疑。</p><p class="ztext-empty-paragraph"><br/></p><p data-pid="X-RCHIZy">报告还说了很多，例如青年失业对经济增长的损失、各国削减支出的同时应当保持青年就业支出的力度等，我就不赘述了。</p><p data-pid="hYGqppWr">把这个青年失业长期化和咱这的房产大周期尾部、人口减少前夜等因素结合，可以看到00后困境的端倪：</p><p data-pid="fYXfULUR">一，产业分化下，择业的重要性越来越高，入错行的代价很沉重。</p><p data-pid="e5yGUc6m">这是少有的个人能努力的地方，但努力的节点在高中，这时候高中生/高中老师/家长往往没有的足够信息量来支撑判断。</p><p data-pid="fFTVFNPh">二，资产分化下，家庭财富（户口/房产所在地/家庭背景和社会关系）的存量明显高于个人努力的增量。</p><p data-pid="NC_xWaoC">三，国家投资与民间投资的分化下，上岸成为优选。哪怕体制内迟早也要进行成本改革，上岸也比在市场红海里挣扎更优。</p><p data-pid="sJaSlBpo">如果在这三大分化里都没法站住，且青年失业继续，那这些人就要承受代际贫困的成本。</p><p data-pid="k_8c7wln">所以也不怪生育率暴跌，不负债是最优解。</p><p class="ztext-empty-paragraph"><br/></p><hr/><p data-pid="nV5jwVrd">闲聊公号：王子君的碎碎念。</p><p></p><p></p><p></p><p></p><p></p></span><div class="ContentItem-time"><a href="//www.zhihu.com/question/597274200/answer/3010227214" target="_blank"><span aria-label="发布于 2023-05-03 01:18" data-tooltip="发布于 2023-05-03 01:18">发布于 2023-05-03 01:18</span></a>・IP 属地北京</div><html><head><link href="../style.css" rel="stylesheet"/></head></html></div>
+<div>
+    <h1>经济下行期会对00后有什么影响？</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text"
+        options="[object Object]">
+        <p data-first-child="" data-pid="PjaumC7K">谢邀。</p>
+        <p data-pid="5dKeWR9S">代际贫困是核心。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="MAwLT3x4">我觉得很多讨论聊的没错，但焦点模糊。</p>
+        <p data-pid="rkiAik_G">青年失业这事，你往后退一步，放到几十年的尺度上看会很清晰：</p>
+        <p data-pid="Z-y9FMdt">某个时间段的小胖友，他们未来十年乃至更长时间里，收入会明显降低。</p>
+        <p data-pid="rI4ldFZj">这才是青年失业的核心：财富流动的节奏在某代人身上被打乱。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="cNu3Mk87">老美智库CAP，13年讨论次贷危机后老美青年高失业率的长期后果。那时他们16至24岁的青年失业率是16.2%。</p><img src="./img/0.jpg"
+            aspect-ratio="1.7914012738853504">
+        <p data-pid="OYDpotKT">结论是：</p>
+        <p data-pid="tbTR5D2d">约有100万老美青年遭受长期失业；</p>
+        <p data-pid="O9A-Yc0B">他们在未来十年的收入损失约200亿美刀，更长期的损失不易测算。</p>
+        <p data-pid="RUgDrb6e">说白了，长期化的青年高失业和疤痕效应一样，不是把刀子拔出来伤口就会瞬间愈合。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="VKOnrONm">国际劳工组织（ILO）在12年也有类似报告（第101次会议，《青年就业危机：该行动了》），报告里阐明了青年失业的问题：</p>
+        <p data-pid="6pL43uPS">一，低收入。</p>
+        <p data-pid="mdkSGSDE">失业青年不用说，那是无收入。</p>
+        <p data-pid="iJc1NMEG">就业青年的收入也不会高。因为此时是买方市场，总体劳动力卖价会降低或变相降低（工资不变工时增加）。</p>
+        <p data-pid="v0s7_5WG">那年全球就业青年低工资比例32.5%，而整体就业者低工资比例为14.6%（按各自国家标准划分）；</p>
+        <p data-pid="P_Bqkj8C">二，低保障。</p>
+        <p data-pid="OhWV_poQ">非正规就业，也就是所谓的“灵活就业”。工作环境、工时、薪资发放、安全设施等受法律保护力度明显更弱。</p>
+        <p data-pid="Wlbe2OHN">当然，无社保也是常态；</p>
+        <p data-pid="6jVEeM1G">三，低质量。</p>
+        <p data-pid="JucomXay">高失业状态下，青年能获得的就业岗位质量不高，难以成为转向长期就业的垫脚石岗位。</p>
+        <p data-pid="iIkr2vX4">这个很好理解，你送十年外卖也很难换回一份办公室工作，对应职业积累过低。</p>
+        <p data-pid="aZ7FGXfO">这容易导致青年困在“交替性失业”里，反复在多份临时就业间打转。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="7-xoTf6z">上面三点，还可以说是“摩擦性失业”，刚进社会的青年总要遭遇。</p>
+        <p data-pid="WNlGUWWu">那长期化就是个大麻烦。</p>
+        <p data-pid="pbO-tOJX">以印尼为例，01年失业青年的找工作平均时间为6.9个月，09年猛升到14.7个月。</p>
+        <p data-pid="dLj5J7g-">10年时，经合组织青年的长期失业发生率升到22.6%、临时就业发生率38%、兼职27.8%。</p>
+        <p data-pid="7pv43Jyf">几组数据对照，可以看出原本短期的摩擦性失业出现长期化。</p>
+        <p data-pid="Xq5tZ1mQ">长期化后，青年的精神状态会下沉。</p>
+        <p data-pid="miY1oDvv">一，信心遭受打击，放弃就业；</p>
+        <p data-pid="fbrYtzvl">二，受教育意愿衰退。10年时，欧盟15至25岁青年里，不上学/不进修/不工作的比例为12.8%；</p>
+        <p data-pid="ChzyHmTu">三，啃老族回归。10年三季度，经合组织的青年啃老族上升至12.5%，高于08年的10.8%。</p>
+        <p data-pid="dux4G6Jf">受教育青年失业的社会心理打击尤为严重。因为教育是青年走进社会前、对社会最主要的认知。一旦教育投资失败，教育所承载的社会信念也会被质疑。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="X-RCHIZy">报告还说了很多，例如青年失业对经济增长的损失、各国削减支出的同时应当保持青年就业支出的力度等，我就不赘述了。</p>
+        <p data-pid="hYGqppWr">把这个青年失业长期化和咱这的房产大周期尾部、人口减少前夜等因素结合，可以看到00后困境的端倪：</p>
+        <p data-pid="fYXfULUR">一，产业分化下，择业的重要性越来越高，入错行的代价很沉重。</p>
+        <p data-pid="e5yGUc6m">这是少有的个人能努力的地方，但努力的节点在高中，这时候高中生/高中老师/家长往往没有的足够信息量来支撑判断。</p>
+        <p data-pid="fFTVFNPh">二，资产分化下，家庭财富（户口/房产所在地/家庭背景和社会关系）的存量明显高于个人努力的增量。</p>
+        <p data-pid="NC_xWaoC">三，国家投资与民间投资的分化下，上岸成为优选。哪怕体制内迟早也要进行成本改革，上岸也比在市场红海里挣扎更优。</p>
+        <p data-pid="sJaSlBpo">如果在这三大分化里都没法站住，且青年失业继续，那这些人就要承受代际贫困的成本。</p>
+        <p data-pid="k_8c7wln">所以也不怪生育率暴跌，不负债是最优解。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <hr />
+        <p data-pid="nV5jwVrd">闲聊公号：王子君的碎碎念。</p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+    </span>
+    <div class="ContentItem-time"><a href="//www.zhihu.com/question/597274200/answer/3010227214" target="_blank"><span
+                aria-label="发布于 2023-05-03 01:18" data-tooltip="发布于 2023-05-03 01:18">发布于 2023-05-03 01:18</span></a>・IP
+        属地北京</div>
+    <html>
+
+    <head>
+        <link href="../style.css" rel="stylesheet" />
+    </head>
+
+    </html>
+</div>
