--- a/S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇/index.html
+++ b/S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="CollectionItem">
     <h1>S10知乎Live：敢梦十年，敢为巅峰——FireFox观点篇</h1>
     <div class="RichText ztext Post-RichText css-1g0fqss" options="[object Object]">
         <p data-first-child="" data-pid="i-MWvG_5">主讲：长毛、FireFox、kRYST4L</p>
