--- a/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010480060/index.html
+++ b/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010480060/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="CollectionItem">
     <h1>为啥南京大学蒋炎岩老师的操作系统课那么难啊?</h1><span
         class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]">
         <p data-first-child="" data-pid="-cVrSahv">你可能都不知道在学习操作系统课程的时候遇到这样一位老师是多么的幸运。</p>
