--- a/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010995032/index.html
+++ b/为啥南京大学蒋炎岩老师的操作系统课那么难啊_3010995032/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="CollectionItem">
     <h1>为啥南京大学蒋炎岩老师的操作系统课那么难啊?</h1><span
         class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]">
         <p data-first-child="" data-pid="fzejgQwx">泻药</p>
