--- a/经济下行期会对00后有什么影响_3010227214/index.html
+++ b/经济下行期会对00后有什么影响_3010227214/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="CollectionItem">
     <h1>经济下行期会对00后有什么影响？</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text"
         options="[object Object]">
         <p data-first-child="" data-pid="PjaumC7K">谢邀。</p>
