--- a/详解_5种CSS选择器的结合使用/index.html
+++ b/详解_5种CSS选择器的结合使用/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="CollectionItem">
     <h1>详解:5种CSS选择器的结合使用</h1>
     <div class="RichText ztext Post-RichText css-1g0fqss" options="[object Object]">
         <p data-first-child="" data-pid="2kgnNWah">1、元素选择器</p>
