--- a/上海静安寺内一男子拿塑料袋捡祈福硬币，一把把抓起放进袋中，如何从法律的角度解读？景区方是否疏于管理？3015876431/index.html
+++ b/上海静安寺内一男子拿塑料袋捡祈福硬币，一把把抓起放进袋中，如何从法律的角度解读？景区方是否疏于管理？3015876431/index.html
@@ -1,1 +1,24 @@
-<div class_="CollectionItem"><h1>上海静安寺内一男子拿塑料袋捡祈福硬币，一把把抓起放进袋中，如何从法律的角度解读？景区方是否疏于管理？</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]"><p data-first-child="" data-pid="bsLQZO4q">标题党了，男子根本没偷好吧！</p><p data-pid="d0dnuA0v">而且佛理上：这钱得佛主去报案或者起诉主张，因为这些祈福硬币是信徒给佛主的，关你寺庙或者景区什么事，又不是你的钱，不过佛主有说普度众生，应该不会办案或起诉！</p><p data-pid="yVxmccyI">事实上，这男子也并没有把这些钱拿走。</p><p data-pid="_hrzrF78">5月5日下午，上海静安寺工作人员告诉记者，静安寺工作人员发现此事后，立即向公安机关报案。<b>随后，公安人员调取现场监控录像，并结合现场勘查情况，发现这名男子将捡拾硬币放到旁边的功德箱里了，并没有带走这些硬币。</b></p><p data-pid="inr72bqI"><b>也就是说，这男的是帮你寺庙管理，给你们理财！</b></p><p data-pid="KveX7TLg"><b>如果，这男子是把硬币拿走</b>，那从法理上：该男子的行为涉嫌盗窃罪。</p><p data-pid="rAGmKpiL">怎么说呢？</p><p data-pid="CZIk3UD-">因为当香客把相应钱币投到香炉（许愿鼎）之后，即已完成相应赠予的行为，相关钱币已经属于寺庙，而并非无主物或者遗失或遗忘物。</p><p data-pid="37EWihum">根据《中华人民共和国刑法》第二百六十四条规定：盗窃公私财物，数额较大的，或者多次盗窃、入户盗窃、携带凶器盗窃、扒窃的，处三年以下有期徒刑、拘役或者管制，并处或者单处罚金；数额巨大或者有其他严重情节的，处三年以上十年以下有期徒刑，并处罚金；数额特别巨大或者有其他特别严重情节的，处十年以上有期徒刑或者无期徒刑，并处罚金或者没收财产。</p><p data-pid="vjv8f2mp">如果该男子未经允许擅自取走属于寺院的钱币符合盗窃的行为特征，即盗取了寺院的钱财。</p><p data-pid="YgsN9bb8">需特别说明的是，盗窃行为不仅仅局限于“秘密获取”，如果男子扒拉所取得钱币金额较少，达不到盗窃罪的入罪标准，也无法进行刑事处罚。</p></span><div class="ContentItem-time"><a href="//www.zhihu.com/question/599012151/answer/3015876431" target="_blank"><span aria-label="发布于 2023-05-06 18:11" data-tooltip="发布于 2023-05-06 18:11">编辑于 2023-05-06 18:23</span></a>・IP 属地浙江</div><link href="../style.css" rel="stylesheet"/></div>
+<div class="CollectionItem">
+    <h1>上海静安寺内一男子拿塑料袋捡祈福硬币，一把把抓起放进袋中，如何从法律的角度解读？景区方是否疏于管理？</h1><span
+        class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]">
+        <p data-first-child="" data-pid="bsLQZO4q">标题党了，男子根本没偷好吧！</p>
+        <p data-pid="d0dnuA0v">而且佛理上：这钱得佛主去报案或者起诉主张，因为这些祈福硬币是信徒给佛主的，关你寺庙或者景区什么事，又不是你的钱，不过佛主有说普度众生，应该不会办案或起诉！</p>
+        <p data-pid="yVxmccyI">事实上，这男子也并没有把这些钱拿走。</p>
+        <p data-pid="_hrzrF78">
+            5月5日下午，上海静安寺工作人员告诉记者，静安寺工作人员发现此事后，立即向公安机关报案。<b>随后，公安人员调取现场监控录像，并结合现场勘查情况，发现这名男子将捡拾硬币放到旁边的功德箱里了，并没有带走这些硬币。</b>
+        </p>
+        <p data-pid="inr72bqI"><b>也就是说，这男的是帮你寺庙管理，给你们理财！</b></p>
+        <p data-pid="KveX7TLg"><b>如果，这男子是把硬币拿走</b>，那从法理上：该男子的行为涉嫌盗窃罪。</p>
+        <p data-pid="rAGmKpiL">怎么说呢？</p>
+        <p data-pid="CZIk3UD-">因为当香客把相应钱币投到香炉（许愿鼎）之后，即已完成相应赠予的行为，相关钱币已经属于寺庙，而并非无主物或者遗失或遗忘物。</p>
+        <p data-pid="37EWihum">
+            根据《中华人民共和国刑法》第二百六十四条规定：盗窃公私财物，数额较大的，或者多次盗窃、入户盗窃、携带凶器盗窃、扒窃的，处三年以下有期徒刑、拘役或者管制，并处或者单处罚金；数额巨大或者有其他严重情节的，处三年以上十年以下有期徒刑，并处罚金；数额特别巨大或者有其他特别严重情节的，处十年以上有期徒刑或者无期徒刑，并处罚金或者没收财产。
+        </p>
+        <p data-pid="vjv8f2mp">如果该男子未经允许擅自取走属于寺院的钱币符合盗窃的行为特征，即盗取了寺院的钱财。</p>
+        <p data-pid="YgsN9bb8">需特别说明的是，盗窃行为不仅仅局限于“秘密获取”，如果男子扒拉所取得钱币金额较少，达不到盗窃罪的入罪标准，也无法进行刑事处罚。</p>
+    </span>
+    <div class="ContentItem-time"><a href="//www.zhihu.com/question/599012151/answer/3015876431" target="_blank"><span
+                aria-label="发布于 2023-05-06 18:11" data-tooltip="发布于 2023-05-06 18:11">编辑于 2023-05-06 18:23</span></a>・IP
+        属地浙江</div>
+    <link href="../style.css" rel="stylesheet" />
+</div>
