--- a/如何看待2023年5月5日南昌出现了咬人事件_3016002876/index.html
+++ b/如何看待2023年5月5日南昌出现了咬人事件_3016002876/index.html
@@ -1,1 +1,91 @@
-<div class_="CollectionItem"><h1>如何看待2023年5月5日南昌出现了咬人事件?</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]"><p data-first-child="" data-pid="Daad53CR">(已更新)</p><p data-pid="fzSeM8uA">这个是网上流传的:</p><p data-pid="_7FSmAmv">5月5月这一天，一名男子在街头突然向一名保洁阿姨发动攻击，采取了极端的手段，咬伤了保洁阿姨的手臂，导致伤口出血严重。</p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/0.jpg';this.onerror=null;" src="./img/0.jpg" aspect-ratio ="0.8285714285714286"><p data-pid="NHNSQOZV">据目击者称，当时保洁阿姨正在路边清理垃圾，突然有一名男子向她冲来，并用力咬住了她的手臂，直到她大声呼救后才停手。被咬的手臂上，鲜血直流，不少路人被所见所闻吓得不轻。</p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/1.jpg';this.onerror=null;" src="./img/1.jpg" aspect-ratio ="0.825974025974026"><p data-pid="AHH4c45k">随后，保洁阿姨的同事们赶到现场，报警并进行了紧急处理。警方很快赶到现场，将男子控制住并送往医院进行处理。</p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/2.jpg';this.onerror=null;" src="./img/2.jpg" aspect-ratio ="0.8025641025641026"><p data-pid="dPUEibNd">目前，男子的具体原因仍在调查中。</p><p data-pid="rIZAUPo4">下面是警方通报的:</p><p data-pid="Rq1AF_RA">南昌警方称男子咬保洁阿姨系误传，是被棍子打伤。</p><p data-pid="8PLOnu_h">5月6日下午，对于网传“南昌男子咬人”事件，南昌市公安局向封面新闻记者回复，不是咬人，系误传，是被棍子打伤。</p><p data-pid="2ji_vl_g">警方通报的真实性暂且不说。</p><p data-pid="cogJg7qh">还有不少人把这件事和《辛普森一家人》里预言的丧尸病毒爆发于2023年8月联系到一起。</p><p data-pid="yygEI9Ci">只能说明现在的社会压力太大了，以至于不少人都乐呵呵的想着丧尸来临地球毁灭啥的了。</p><p data-pid="p3tSJ7tV">可是生活还是得继续过下去啊！该上学的得继续上学，该上班的得继续上班。该干啥还是得干啥。</p><p data-pid="iZOJUf3R">不过有时候还真希望……</p><p data-pid="3ncMrjS5">唉！继续搬砖吧！还是。</p><p class="ztext-empty-paragraph"><br/></p><p data-pid="jU-2aXPg">更新一下</p><p data-pid="wTe2rwXp">(以下信息来源于网络helelbenshachar的微博)</p><p data-pid="odgjCsVW">整理归纳一下我所收集到的南昌咬人事件相关之信息：</p><p data-pid="EEKn0yNm">（1）：据互联网浙江省某知情者透露：约：5月6日（大约在3～5日间），陕西省一男子透露，他作为医生的儿子，看到一位患者突然发狂，并将护士咬伤，目前还不知此事后续情况。</p><p data-pid="G5lXXVk7">（2）：据互联网消息：山东省某知乎匿名用户于2022.8.31/晚10：23透露：2023年5月，将会出现传闻中的丧尸。（此知情者是如何在去年八月份知道的如此详细，我尚不得知，但是结合最近的媒体报道，这条消息已经被证实）。</p><p data-pid="kZX4exEx">注：此匿名用户透露的消息在：2023年5月6日/下午5：59被某贵州民众意外发现，此贵州知乎用户账号名为：Lvwenjie，与其他证据显示，应当是女性。</p><p data-pid="fYVteRYD">（3）：我之前得到了某位粉丝私发于我的互联网截图，图片上显示：【大规模狂人将于：2023年7～8月份爆发。】（对于这条信息我保留个人看法，个人观点认为可能会提前）</p><p data-pid="fZnu9XSk">【大规模狂人爆发前症状：无神志，感染者呕吐强烈，（如同要把内脏吐出来似的）】（这条和我下面要公布的内容，似乎结合在了一起）</p><p data-pid="58m2mmmZ">【狂人力大，行动迅捷，会攀爬，具有部分视力，不知疲倦，人体感染迅速，要害为大脑。】（已死之人不得见空气～对于这一句，完全是错误的：因为狂人本质上是“中枢神经系统感染患者”，并非传统民众所认知的“死人复活”｛他们实际上仅仅是脑炎感染患者｝。）</p><p data-pid="OdB7GDhF">（4）：2023年5月5日，据官方媒体报道：吉林省长春市：某幼儿园多名儿童因“呕吐+腹痛”的外在症状而被紧急送医。</p><p data-pid="xWuPddJf">官方对外宣称：是“诺如病毒”感染。</p><p data-pid="RYYl8Dgn">据悉：当地官方有关部门已经紧急介入处理。</p><p data-pid="C4a4zTTH">（直到现在，我并未看见后续报道。）</p><p data-pid="-v-xuvfi">（5）：“南昌咬人事件”最初的互联网现场拍摄博主，现在已经完全找不到此人的相关信息了。大概是7日，我最后搜索到这个博主时，此博主在评论区于5月6日（此后，未曾见到任何有关他的消息，他的账号也完全没有任何更新）透露：“南昌事件”中被咬的保洁，直到5月6日，仍在医院住院治疗。（至于为什么手部外伤两天后仍在住院治疗，对此，我无法得知更多消息，｛我以前受过的外伤比那个保洁更严重，但仅仅是简单缝合一下就回家了，我看这个原视频现场拍摄者的对外回答，我大概能猜到，他肯定是知道些什么｝）</p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/3.jpg';this.onerror=null;" src="./img/3.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/4.jpg';this.onerror=null;" src="./img/4.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/5.jpg';this.onerror=null;" src="./img/5.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/6.jpg';this.onerror=null;" src="./img/6.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/7.jpg';this.onerror=null;" src="./img/7.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/8.jpg';this.onerror=null;" src="./img/8.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/9.jpg';this.onerror=null;" src="./img/9.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/10.jpg';this.onerror=null;" src="./img/10.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/11.jpg';this.onerror=null;" src="./img/11.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/12.jpg';this.onerror=null;" src="./img/12.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/13.jpg';this.onerror=null;" src="./img/13.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/14.jpg';this.onerror=null;" src="./img/14.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/15.jpg';this.onerror=null;" src="./img/15.jpg" aspect-ratio ="0.45219029674988226"><p class="ztext-empty-paragraph"><br/></p><p data-pid="wtR31hNr">以上信息来源于网络可能是谣言，大家应该理智看待，尽量相信官方发布的信息。</p></span><div class="ContentItem-time"><a href="//www.zhihu.com/question/599331926/answer/3016002876" target="_blank"><span aria-label="发布于 2023-05-06 20:00" data-tooltip="发布于 2023-05-06 20:00">编辑于 2023-05-08 10:36</span></a>・IP 属地广东</div><link href="../style.css" rel="stylesheet"/></div>
+<div class_="CollectionItem">
+    <h1>如何看待2023年5月5日南昌出现了咬人事件?</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text"
+        options="[object Object]">
+        <p data-first-child="" data-pid="Daad53CR">(已更新)</p>
+        <p data-pid="fzSeM8uA">这个是网上流传的:</p>
+        <p data-pid="_7FSmAmv">5月5月这一天，一名男子在街头突然向一名保洁阿姨发动攻击，采取了极端的手段，咬伤了保洁阿姨的手臂，导致伤口出血严重。</p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/0.jpg';this.onerror=null;"
+            src="./img/0.jpg" aspect-ratio="0.8285714285714286">
+        <p data-pid="NHNSQOZV">据目击者称，当时保洁阿姨正在路边清理垃圾，突然有一名男子向她冲来，并用力咬住了她的手臂，直到她大声呼救后才停手。被咬的手臂上，鲜血直流，不少路人被所见所闻吓得不轻。</p>
+        <img onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/1.jpg';this.onerror=null;"
+            src="./img/1.jpg" aspect-ratio="0.825974025974026">
+        <p data-pid="AHH4c45k">随后，保洁阿姨的同事们赶到现场，报警并进行了紧急处理。警方很快赶到现场，将男子控制住并送往医院进行处理。</p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/2.jpg';this.onerror=null;"
+            src="./img/2.jpg" aspect-ratio="0.8025641025641026">
+        <p data-pid="dPUEibNd">目前，男子的具体原因仍在调查中。</p>
+        <p data-pid="rIZAUPo4">下面是警方通报的:</p>
+        <p data-pid="Rq1AF_RA">南昌警方称男子咬保洁阿姨系误传，是被棍子打伤。</p>
+        <p data-pid="8PLOnu_h">5月6日下午，对于网传“南昌男子咬人”事件，南昌市公安局向封面新闻记者回复，不是咬人，系误传，是被棍子打伤。</p>
+        <p data-pid="2ji_vl_g">警方通报的真实性暂且不说。</p>
+        <p data-pid="cogJg7qh">还有不少人把这件事和《辛普森一家人》里预言的丧尸病毒爆发于2023年8月联系到一起。</p>
+        <p data-pid="yygEI9Ci">只能说明现在的社会压力太大了，以至于不少人都乐呵呵的想着丧尸来临地球毁灭啥的了。</p>
+        <p data-pid="p3tSJ7tV">可是生活还是得继续过下去啊！该上学的得继续上学，该上班的得继续上班。该干啥还是得干啥。</p>
+        <p data-pid="iZOJUf3R">不过有时候还真希望……</p>
+        <p data-pid="3ncMrjS5">唉！继续搬砖吧！还是。</p>
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="jU-2aXPg">更新一下</p>
+        <p data-pid="wTe2rwXp">(以下信息来源于网络helelbenshachar的微博)</p>
+        <p data-pid="odgjCsVW">整理归纳一下我所收集到的南昌咬人事件相关之信息：</p>
+        <p data-pid="EEKn0yNm">（1）：据互联网浙江省某知情者透露：约：5月6日（大约在3～5日间），陕西省一男子透露，他作为医生的儿子，看到一位患者突然发狂，并将护士咬伤，目前还不知此事后续情况。</p>
+        <p data-pid="G5lXXVk7">
+            （2）：据互联网消息：山东省某知乎匿名用户于2022.8.31/晚10：23透露：2023年5月，将会出现传闻中的丧尸。（此知情者是如何在去年八月份知道的如此详细，我尚不得知，但是结合最近的媒体报道，这条消息已经被证实）。
+        </p>
+        <p data-pid="kZX4exEx">注：此匿名用户透露的消息在：2023年5月6日/下午5：59被某贵州民众意外发现，此贵州知乎用户账号名为：Lvwenjie，与其他证据显示，应当是女性。</p>
+        <p data-pid="fYVteRYD">（3）：我之前得到了某位粉丝私发于我的互联网截图，图片上显示：【大规模狂人将于：2023年7～8月份爆发。】（对于这条信息我保留个人看法，个人观点认为可能会提前）</p>
+        <p data-pid="fZnu9XSk">【大规模狂人爆发前症状：无神志，感染者呕吐强烈，（如同要把内脏吐出来似的）】（这条和我下面要公布的内容，似乎结合在了一起）</p>
+        <p data-pid="58m2mmmZ">
+            【狂人力大，行动迅捷，会攀爬，具有部分视力，不知疲倦，人体感染迅速，要害为大脑。】（已死之人不得见空气～对于这一句，完全是错误的：因为狂人本质上是“中枢神经系统感染患者”，并非传统民众所认知的“死人复活”｛他们实际上仅仅是脑炎感染患者｝。）
+        </p>
+        <p data-pid="OdB7GDhF">（4）：2023年5月5日，据官方媒体报道：吉林省长春市：某幼儿园多名儿童因“呕吐+腹痛”的外在症状而被紧急送医。</p>
+        <p data-pid="xWuPddJf">官方对外宣称：是“诺如病毒”感染。</p>
+        <p data-pid="RYYl8Dgn">据悉：当地官方有关部门已经紧急介入处理。</p>
+        <p data-pid="C4a4zTTH">（直到现在，我并未看见后续报道。）</p>
+        <p data-pid="-v-xuvfi">
+            （5）：“南昌咬人事件”最初的互联网现场拍摄博主，现在已经完全找不到此人的相关信息了。大概是7日，我最后搜索到这个博主时，此博主在评论区于5月6日（此后，未曾见到任何有关他的消息，他的账号也完全没有任何更新）透露：“南昌事件”中被咬的保洁，直到5月6日，仍在医院住院治疗。（至于为什么手部外伤两天后仍在住院治疗，对此，我无法得知更多消息，｛我以前受过的外伤比那个保洁更严重，但仅仅是简单缝合一下就回家了，我看这个原视频现场拍摄者的对外回答，我大概能猜到，他肯定是知道些什么｝）
+        </p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/3.jpg';this.onerror=null;"
+            src="./img/3.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/4.jpg';this.onerror=null;"
+            src="./img/4.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/5.jpg';this.onerror=null;"
+            src="./img/5.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/6.jpg';this.onerror=null;"
+            src="./img/6.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/7.jpg';this.onerror=null;"
+            src="./img/7.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/8.jpg';this.onerror=null;"
+            src="./img/8.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/9.jpg';this.onerror=null;"
+            src="./img/9.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/10.jpg';this.onerror=null;"
+            src="./img/10.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/11.jpg';this.onerror=null;"
+            src="./img/11.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/12.jpg';this.onerror=null;"
+            src="./img/12.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/13.jpg';this.onerror=null;"
+            src="./img/13.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/14.jpg';this.onerror=null;"
+            src="./img/14.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p><img
+            onerror="this.src='https://raw.githubusercontent.com/sduoooh/file/main/如何看待2023年5月5日南昌出现了咬人事件_/img//img/15.jpg';this.onerror=null;"
+            src="./img/15.jpg" aspect-ratio="0.45219029674988226">
+        <p class="ztext-empty-paragraph"><br /></p>
+        <p data-pid="wtR31hNr">以上信息来源于网络可能是谣言，大家应该理智看待，尽量相信官方发布的信息。</p>
+    </span>
+    <div class="ContentItem-time"><a href="//www.zhihu.com/question/599331926/answer/3016002876" target="_blank"><span
+                aria-label="发布于 2023-05-06 20:00" data-tooltip="发布于 2023-05-06 20:00">编辑于 2023-05-08 10:36</span></a>・IP
+        属地广东</div>
+    <link rel="stylesheet" href="../style.css" ></link>
+</div>
