--- a/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_3014523680/index.html
+++ b/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_3014523680/index.html
@@ -1,18 +1,1 @@
-<div class="CollectionItem">
-    <h1>乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事？</h1><span
-        class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]">
-        <p data-first-child="" data-pid="h6gdc5TJ">这个俄方代表多少有点欠，不要说乌正在与鹅交战了，</p>
-        <p data-pid="IDBnZRe7">换做任何一个国家的代表碰上这事他都要挨揍。</p>
-        <video controls>
-                <source type="video/mp4"
-                    src='https://sduoooh.me/file/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_/video/0.mp4'>
-                <source type="video/mp4" src="./video/0.mp4">
-                <source type="video/mp4" src="https://vdn3.vzuu.com/SD/56b12c66-eb49-11ed-982d-8e8d52db1f15-v8_f2_t1_qa2KDTSg.mp4?disable_local_cache=1&bu=http-4e83193b&c=avc.8.0&f=mp4&expiration=1683731655&auth_key=1683731655-0-0-5a401e0cd7d93e3eff10a37636159cca&v=tx&pu=4e83193b">
-            </video>
-            <p></p>
-    </span>
-    <link href="../style.css" rel="stylesheet" />
-    <div class="ContentItem-time"><a href="https://www.zhihu.com/question/599190791/answer/3014523680"
-            target="_blank"><span aria-label="发布于 2023-05-05 21:36" data-tooltip="发布于 2023-05-05 21:36">编辑于 2023-05-05
-                21:37</span></a>・IP 属地广东</div>
-</div>
+<div class="CollectionItem"><h1>乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事？</h1><span class="RichText ztext CopyrightRichText-richText css-1g0fqss" itemprop="text" options="[object Object]"><p data-first-child="" data-pid="h6gdc5TJ">这个俄方代表多少有点欠，不要说乌正在与鹅交战了，</p><p data-pid="IDBnZRe7">换做任何一个国家的代表碰上这事他都要挨揍。</p><video controls><source type="video/mp4" src='https://sduoooh.me/file/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_/video/0.mp4'><source type="video/mp4" src="./video/0.mp4" ></video><p></p></span><link href="../style.css" rel="stylesheet"/><div class="ContentItem-time"><a href="https://www.zhihu.com/question/599190791/answer/3014523680" target="_blank"><span aria-label="发布于 2023-05-05 21:36" data-tooltip="发布于 2023-05-05 21:36">编辑于 2023-05-05 21:37</span></a>・IP 属地广东</div></div>
