--- a/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_3014523680/index.html
+++ b/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_3014523680/index.html
@@ -5,7 +5,7 @@
         <p data-pid="IDBnZRe7">换做任何一个国家的代表碰上这事他都要挨揍。</p><video controls>
             <source type="video/mp4" src="./video/0.mp4">
             <source type="video/mp4"
-                src='https://sduoooh.me/collection/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_3014523680/video/0.mp4'>
+                src='https://sduoooh.me/collection/file/乌克兰代表因展示自家国旗被抢夺暴揍俄代表，俄方政客：这种行为更适合动物园，大家如何看待此事_3014523680/video/0.mp4'>
         </video>
         <p></p>
     </span>
