--- a/如何看待2023年5月5日南昌出现了咬人事件_3016002876/index.html
+++ b/如何看待2023年5月5日南昌出现了咬人事件_3016002876/index.html
@@ -4,13 +4,13 @@
         <p data-first-child="" data-pid="Daad53CR">(已更新)</p>
         <p data-pid="fzSeM8uA">这个是网上流传的:</p>
         <p data-pid="_7FSmAmv">5月5月这一天，一名男子在街头突然向一名保洁阿姨发动攻击，采取了极端的手段，咬伤了保洁阿姨的手臂，导致伤口出血严重。</p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/0.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/0.jpg';this.onerror=null;"
             src="./img/0.jpg" aspect-ratio="0.8285714285714286">
         <p data-pid="NHNSQOZV">据目击者称，当时保洁阿姨正在路边清理垃圾，突然有一名男子向她冲来，并用力咬住了她的手臂，直到她大声呼救后才停手。被咬的手臂上，鲜血直流，不少路人被所见所闻吓得不轻。</p>
-        <img onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/1.jpg';this.onerror=null;"
+        <img onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/1.jpg';this.onerror=null;"
             src="./img/1.jpg" aspect-ratio="0.825974025974026">
         <p data-pid="AHH4c45k">随后，保洁阿姨的同事们赶到现场，报警并进行了紧急处理。警方很快赶到现场，将男子控制住并送往医院进行处理。</p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/2.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/2.jpg';this.onerror=null;"
             src="./img/2.jpg" aspect-ratio="0.8025641025641026">
         <p data-pid="dPUEibNd">目前，男子的具体原因仍在调查中。</p>
         <p data-pid="rIZAUPo4">下面是警方通报的:</p>
@@ -43,43 +43,43 @@
         <p data-pid="-v-xuvfi">
             （5）：“南昌咬人事件”最初的互联网现场拍摄博主，现在已经完全找不到此人的相关信息了。大概是7日，我最后搜索到这个博主时，此博主在评论区于5月6日（此后，未曾见到任何有关他的消息，他的账号也完全没有任何更新）透露：“南昌事件”中被咬的保洁，直到5月6日，仍在医院住院治疗。（至于为什么手部外伤两天后仍在住院治疗，对此，我无法得知更多消息，｛我以前受过的外伤比那个保洁更严重，但仅仅是简单缝合一下就回家了，我看这个原视频现场拍摄者的对外回答，我大概能猜到，他肯定是知道些什么｝）
         </p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/3.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/3.jpg';this.onerror=null;"
             src="./img/3.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/4.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/4.jpg';this.onerror=null;"
             src="./img/4.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/5.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/5.jpg';this.onerror=null;"
             src="./img/5.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/6.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/6.jpg';this.onerror=null;"
             src="./img/6.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/7.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/7.jpg';this.onerror=null;"
             src="./img/7.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/8.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/8.jpg';this.onerror=null;"
             src="./img/8.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/9.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/9.jpg';this.onerror=null;"
             src="./img/9.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/10.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/10.jpg';this.onerror=null;"
             src="./img/10.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/11.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/11.jpg';this.onerror=null;"
             src="./img/11.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/12.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/12.jpg';this.onerror=null;"
             src="./img/12.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/13.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/13.jpg';this.onerror=null;"
             src="./img/13.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/14.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/14.jpg';this.onerror=null;"
             src="./img/14.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p><img
-            onerror="this.src='https://sduoooh.me/collection/file/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/15.jpg';this.onerror=null;"
+            onerror="this.src='https://file.sduoooh.me/如何看待2023年5月5日南昌出现了咬人事件_3016002876/img/15.jpg';this.onerror=null;"
             src="./img/15.jpg" aspect-ratio="0.45219029674988226">
         <p class="ztext-empty-paragraph"><br /></p>
         <p data-pid="wtR31hNr">以上信息来源于网络可能是谣言，大家应该理智看待，尽量相信官方发布的信息。</p>
